NLP TP/texts/robotics/robotics.stackexchange_0000092694.txt
Q:

catkin_make error with teb_local_planner

Ubuntu 16.04.6 LTS, ROS kinetic
Hello,
I'm having trouble for a while now with the teb_local_planner when building my catkin workspace with catkin_make. The errors (terminal output at the end of this post) seem to come from some version problem. I think I once typed by accident
sudo apt-get install ros-melodic-teb-local-planner

instead of
sudo apt-get install ros-kinetic-teb-local-planner

I've since run the later too but it didn't solve it.
Could this still be the reason for the error? And if so / if not, has anyone an idea to fix it?
[ 95%] Built target move_base_node
[ 95%] Building CXX object teb_local_planner/CMakeFiles/teb_local_planner.dir/src/teb_local_planner_ros.cpp.o
/home/moro01/catkin_ws/src/teb_local_planner/src/teb_local_planner_ros.cpp: In member function ‘virtual bool teb_local_planner::TebLocalPlannerROS::computeVelocityCommands(geometry_msgs::Twist&)’:
/home/moro01/catkin_ws/src/teb_local_planner/src/teb_local_planner_ros.cpp:229:40: error: no matching function for call to ‘costmap_2d::Costmap2DROS::getRobotPose(tf::Stamped<tf::Transform>&)’
   costmap_ros_->getRobotPose(robot_pose);
                                        ^
In file included from /home/moro01/catkin_ws/src/navigation/nav_core/include/nav_core/base_local_planner.h:42:0,
                 from /home/moro01/catkin_ws/src/teb_local_planner/include/teb_local_planner/teb_local_planner_ros.h:45,
                 from /home/moro01/catkin_ws/src/teb_local_planner/src/teb_local_planner_ros.cpp:39:
/home/moro01/catkin_ws/src/navigation/costmap_2d/include/costmap_2d/costmap_2d_ros.h:125:8: note: candidate: bool costmap_2d::Costmap2DROS::getRobotPose(geometry_msgs::PoseStamped&) const
   bool getRobotPose(geometry_msgs::PoseStamped& global_pose) const;
        ^
/home/moro01/catkin_ws/src/navigation/costmap_2d/include/costmap_2d/costmap_2d_ros.h:125:8: note:   no known conversion for argument 1 from ‘tf::Stamped<tf::Transform>’ to ‘geometry_msgs::PoseStamped& {aka geometry_msgs::PoseStamped_<std::allocator<void> >&}’
/home/moro01/catkin_ws/src/teb_local_planner/src/teb_local_planner_ros.cpp:234:40: error: no matching function for call to ‘base_local_planner::OdometryHelperRos::getRobotVel(tf::Stamped<tf::Transform>&)’
   odom_helper_.getRobotVel(robot_vel_tf);
                                        ^
In file included from /home/moro01/catkin_ws/src/teb_local_planner/include/teb_local_planner/teb_local_planner_ros.h:47:0,
                 from /home/moro01/catkin_ws/src/teb_local_planner/src/teb_local_planner_ros.cpp:39:
/home/moro01/catkin_ws/src/navigation/base_local_planner/include/base_local_planner/odometry_helper_ros.h:66:8: note: candidate: void base_local_planner::OdometryHelperRos::getRobotVel(geometry_msgs::PoseStamped&)
   void getRobotVel(geometry_msgs::PoseStamped& robot_vel);
        ^
/home/moro01/catkin_ws/src/navigation/base_local_planner/include/base_local_planner/odometry_helper_ros.h:66:8: note:   no known conversion for argument 1 from ‘tf::Stamped<tf::Transform>’ to ‘geometry_msgs::PoseStamped& {aka geometry_msgs::PoseStamped_<std::allocator<void> >&}’
In file included from /opt/ros/kinetic/include/class_loader/class_loader_core.hpp:46:0,
                 from /opt/ros/kinetic/include/class_loader/class_loader.hpp:43,
                 from /opt/ros/kinetic/include/class_loader/./multi_library_class_loader.hpp:42,
                 from /opt/ros/kinetic/include/class_loader/multi_library_class_loader.h:35,
                 from /opt/ros/kinetic/include/pluginlib/class_loader.hpp:38,
                 from /home/moro01/catkin_ws/src/navigation/costmap_2d/include/costmap_2d/costmap_2d_ros.h:50,
                 from /home/moro01/catkin_ws/src/navigation/nav_core/include/nav_core/base_local_planner.h:42,
                 from /home/moro01/catkin_ws/src/teb_local_planner/include/teb_local_planner/teb_local_planner_ros.h:45,
                 from /home/moro01/catkin_ws/src/teb_local_planner/src/teb_local_planner_ros.cpp:39:
/opt/ros/kinetic/include/class_loader/meta_object.hpp: In instantiation of ‘B* class_loader::class_loader_private::MetaObject<C, B>::create() const [with C = teb_local_planner::TebLocalPlannerROS; B = nav_core::BaseLocalPlanner]’:
/home/moro01/catkin_ws/src/teb_local_planner/src/teb_local_planner_ros.cpp:1159:1:   required from here
/opt/ros/kinetic/include/class_loader/meta_object.hpp:198:16: error: invalid new-expression of abstract class type ‘teb_local_planner::TebLocalPlannerROS’
     return new C;
                ^
In file included from /home/moro01/catkin_ws/src/teb_local_planner/src/teb_local_planner_ros.cpp:39:0:
/home/moro01/catkin_ws/src/teb_local_planner/include/teb_local_planner/teb_local_planner_ros.h:92:7: note:   because the following virtual functions are pure within ‘teb_local_planner::TebLocalPlannerROS’:
 class TebLocalPlannerROS : public nav_core::BaseLocalPlanner
       ^
In file included from /home/moro01/catkin_ws/src/teb_local_planner/include/teb_local_planner/teb_local_planner_ros.h:45:0,
                 from /home/moro01/catkin_ws/src/teb_local_planner/src/teb_local_planner_ros.cpp:39:
/home/moro01/catkin_ws/src/navigation/nav_core/include/nav_core/base_local_planner.h:78:20: note:   virtual void nav_core::BaseLocalPlanner::initialize(std::__cxx11::string, tf2_ros::Buffer*, costmap_2d::Costmap2DROS*)
       virtual void initialize(std::string name, tf2_ros::Buffer* tf, costmap_2d::Costmap2DROS* costmap_ros) = 0;
                    ^
teb_local_planner/CMakeFiles/teb_local_planner.dir/build.make:230: recipe for target 'teb_local_planner/CMakeFiles/teb_local_planner.dir/src/teb_local_planner_ros.cpp.o' failed
make[2]: *** [teb_local_planner/CMakeFiles/teb_local_planner.dir/src/teb_local_planner_ros.cpp.o] Error 1
CMakeFiles/Makefile2:10431: recipe for target 'teb_local_planner/CMakeFiles/teb_local_planner.dir/all' failed
make[1]: *** [teb_local_planner/CMakeFiles/teb_local_planner.dir/all] Error 2
Makefile:127: recipe for target 'all' failed
make: *** [all] Error 2
Invoking "make -j4 -l4" failed

Originally posted by Daniel_ on ROS Answers with karma: 51 on 2019-07-23
Post score: 0

A:

Solved it.
See the 2nd paragraph of my related issue. The here asked question had nothing to do with the errors.

Originally posted by Daniel_ with karma: 51 on 2019-07-30
This answer was ACCEPTED on the original site
Post score: 0

